修改微信场景

--- a/weixin/index.html
+++ b/weixin/index.html
@@ -93,7 +93,7 @@
 								<p class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">电话：15538061871</p>
 								<p class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.4s">邮箱：1947298056@qq.com</p>
 								<p class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">年龄：24</p>
-								<p class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">专业：通信工程</p>
+								<p class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">专业：信息工程学院</p>
 								<p class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.7s">毕业院校：郑州大学</p>
 
 							</li>
@@ -127,8 +127,8 @@
 									<div class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">工作经历</div>
 								</li>
 								<li>
-									<p><span class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">2015/6-2015/10：</span><em span class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">上海通天信息有限公司(web前端)</em></p>
-									<p><span class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.8s">2015/11-2016/10：</span><em span class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="1.0s">上海宝龙有限公司(web前端)</em></p>
+									<p><span class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">2014/9-2016/11：</span><em span class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">上海美猴网络科技有限公司(web前端)</em></p>
+									
 								</li>
 							</ul>
 						</div>
@@ -157,7 +157,7 @@
 								</li>
 								<li>
 									<em class="ani" swiper-animate-effect="wobble" swiper-animate-duration="0.5s" swiper-animate-delay="0.2s">喜欢：</em>
-									<p class="ani" swiper-animate-effect="lightSpeedIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">逛前端论坛，和博客</p>
+									<p class="ani" swiper-animate-effect="lightSpeedIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">逛前端论坛，博客</p>
 									<p class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.4s">看书，没事写点小文章</p>
 									<p class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">听音乐</p>
 									<p class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">跑步，喜欢健身</p>
