--- a/weixin/index.html
+++ b/weixin/index.html
@@ -127,7 +127,7 @@
 									<div class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">工作经历</div>
 								</li>
 								<li>
-									<p><span class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">2014/9-2016/11：</span><em span class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">上海美猴网络科技有限公司(web前端)</em></p>
+									<p><span class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">2015/6-2015/10：</span><em span class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">上海美猴网络科技有限公司(web前端)</em></p>
 									
 								</li>
 							</ul>
@@ -157,7 +157,7 @@
 								</li>
 								<li>
 									<em class="ani" swiper-animate-effect="wobble" swiper-animate-duration="0.5s" swiper-animate-delay="0.2s">喜欢：</em>
-									<p class="ani" swiper-animate-effect="lightSpeedIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">逛前端论坛，博客</p>
+									<p class="ani" swiper-animate-effect="lightSpeedIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">逛前端论坛，和博客</p>
 									<p class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.4s">看书，没事写点小文章</p>
 									<p class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s">听音乐</p>
 									<p class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">跑步，喜欢健身</p>
@@ -182,7 +182,7 @@
 								</li>
 								<li>
 									<div>
-										<img src="img/banner02.jpg" alt="" class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1.5s" swiper-animate-delay="0.3s" />
+										<img src="img/ai.jpg" alt="" class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1.5s" swiper-animate-delay="0.3s" />
 									</div>
 								</li>
 								<li>
